# managed

./: README.md  cabal.haskell-ci  default.nix  managed.cabal  release.nix  shell.nix  stack.yaml
.github/workflows/: haskell-ci.yml
src/Control/Monad/: Managed.hs
src/Control/Monad/Managed/: Safe.hs
