Name: managed
Version: 1.0.10
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2014 Gabriella Gonzalez
Author: Gabriella Gonzalez
Maintainer: GenuineGabriella@gmail.com
Tested-With:
    GHC == 9.2.1
    GHC == 9.0.1
    GHC == 8.10.7
    GHC == 8.8.4
    GHC == 8.6.5
    GHC == 8.4.4
    GHC == 8.2.2
    GHC == 8.0.2
    GHC == 7.10.3
Bug-Reports: https://github.com/Gabriella439/managed/issues
Synopsis: A monad for managed values
Description: In Haskell you very often acquire values using the @with...@
  idiom using functions of type @(a -> IO r) -> IO r@.  This idiom forms a
  @Monad@, which is a special case of the @ContT@ monad (from @transformers@) or
  the @Codensity@ monad (from @kan-extensions@).  The main purpose behind this
  package is to provide a restricted form of these monads specialized to this
  unusually common case.
  .
  The reason this package defines a specialized version of these types is to:
  .
  * be more beginner-friendly,
  .
  * simplify inferred types and error messages, and:
  .
  * provide some additional type class instances that would otherwise be orphan
    instances
Category: Control
Source-Repository head
    Type: git
    Location: https://github.com/Gabriella439/managed

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base              >= 4.8     && < 5  ,
        transformers      >= 0.2.0.0 && < 0.7
    if !impl(ghc >= 8.0)
      Build-Depends:
        semigroups        >= 0.16    && < 0.21
    Exposed-Modules:
        Control.Monad.Managed,
        Control.Monad.Managed.Safe
    GHC-Options: -Wall
    Default-Language: Haskell2010
